<?xml version="1.0" encoding="utf-8"?>
<resources>
  <string
    name="app_name">TweetApp</string>

  <string
    name="btn_timeline">Get Timeline</string>
  <string
    name="btn_login">Login</string>
  <string
    name="tv_login_request">Please login, first..</string>
  <string
    name="btn_tweet">Tweet</string>
  <string
    name="btn_back">Back</string>
  <string
    name="dlg_get_timeline">Getting Timeline...</string>
  <string
    name="tv_charscount">Number of Characters:</string>
  <string
    name="tv_charsmax">You entered over 140 chars!</string>
  <string
    name="tv_timeline_title">TIMELINE</string>
  <string
    name="tv_tweetupdate_title">TWEET</string>

</resources>
